dependency injection fixes