@@ -1,7 +1,7 @@
 package com.sh.mmrly;
 
-import com.sh.mmrly.nlp.TaggedToken;
 import com.sh.mmrly.nlp.TextWithWhitespace;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
@@ -10,13 +10,47 @@ import java.util.List;
  * Unitary change. Proposed to replace positions with some text
  */
 public record Replacement(
-    List<Integer> selection,
-    List<TextWithWhitespace> replacement
+    int startIdx,
+    int len,
+    @NotNull List<TextWithWhitespace> replacement
 ) {
-  public static Replacement of(int idx, String... replacement) {
-    final List<TextWithWhitespace> reps = Arrays.stream(replacement)
-        .map(str -> (TextWithWhitespace) TaggedToken.unknownOf(str))
-        .toList();
-    return new Replacement(List.of(idx), reps);
+  public static Replacement of(int idx, int len, TextWithWhitespace... replacements) {
+    return new Replacement(idx, len, Arrays.asList(replacements));
+  }
+
+  public static Replacement replaceAt(int idx, TextWithWhitespace... replacements) {
+    return of(idx, replacements.length, replacements);
+  }
+
+  public static Replacement insertAt(int idx, TextWithWhitespace... replacements) {
+    return of(idx, 0, replacements);
+  }
+
+  public static Replacement deleteFrom(int idx, int len) {
+    return of(idx, len);
+  }
+
+  /**
+   * Mostly for testing purposes
+   *
+   * @return replacement with a text with a space
+   */
+  public static Replacement insertAt(int idx, String... replacements) {
+    TextWithWhitespace[] reps = Arrays.stream(replacements)
+        .map(TWS::textWithSpaceOf)
+        .toArray(TWS[]::new);
+    return insertAt(idx, reps);
+  }
+
+  /**
+   * Mostly for testing purposes
+   *
+   * @return replacement with a text with a space
+   */
+  public static Replacement replaceAt(int idx, String... replacements) {
+    TextWithWhitespace[] reps = Arrays.stream(replacements)
+        .map(TWS::textWithSpaceOf)
+        .toArray(TWS[]::new);
+    return replaceAt(idx, reps);
   }
 }
